Current status of implementation

--- a/html/management_EN.html
+++ b/html/management_EN.html
@@ -296,6 +296,7 @@
 								<option class="option-folder" value="13">All tracks of a random subdirectory (sorted alph.)</option>
 								<option class="option-stream" value="8">Webradio</option>
 								<option class="option-stream" value="11">List (files from SD and/or webstreams) from local .m3u-File</option>
+								<option class="option-stream" value="14">List (files from SD and/or webstreams) from remote .m3u-File</option>
 							</select>
 						</div>
 						<div class="tab-pane " id="rfidmod" role="tabpanel">
