--- a/html/management_DE.html
+++ b/html/management_DE.html
@@ -296,6 +296,7 @@
 								<option class="option-folder" value="13">Alle Titel aus einem zufälligen Unterverzeichnis (sortiert)</option>
 								<option class="option-stream" value="8">Webradio</option>
 								<option class="option-stream" value="11">Liste (Dateien von SD und/oder Webstreams) aus lokaler .m3u-Datei</option>
+								<option class="option-stream" value="14">Liste (Dateien von SD und/oder Webstreams) aus remoter .m3u-Datei</option>
 							</select>
 						</div>
 						<div class="tab-pane " id="rfidmod" role="tabpanel">
